assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Irish+Grover&family=Schoolbell&family=Short+Stack&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}
h1 {
    text-align: center;
    font-size: 300%;
    color: rgb(247, 0, 255);
    font-family: Schoolbell, sans-serif;
}

#menu-link {
    text-decoration: none;
}

button:hover{ border: 3px solid yellow;
}

body {
    background: linear-gradient(to bottom, #ffffff, #80c7f0, #ffffff);
}

.title-window {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-top: 10px;
}

i {
    margin-left: 10%;
    margin-right: 10%;
}

.menu-window {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.menu-window li {
    margin: 1rem;
}

.menu-window ul {
    list-style: none;
    width: 70%;
    max-width: 600px;
}

.header-logo {
    width: 90%;  
    max-width: 600px;
}

.game-logo {
    width: 75%;  
    max-width: 450px;
}
.menu-button {
    padding: 30px;
    border-radius: 10px;
    width: 100%;
    border: 3px solid whitesmoke;
    font-family: Schoolbell, sans-serif;
    font-size: 1.7rem;
    margin: 1%;
    filter: drop-shadow(15px 15px 8px #333333b8);
}

#animals-button {
    background: rgb(219, 24, 70);
    color: #ffffff;
}

#shapes-button {
    background: rgb(237, 136, 13);
    color: oldlace;
}

#colors-button {
    background: rgb(3, 7, 104);
    color: antiquewhite;
}

#about-button {
    background: green;
    color: azure;
}
.footer-window {
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-top: 10px;
    margin-top: 2rem;
}

.container {
    display: block;
    width: 70%;
    margin-left: 15%;
}

.row {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

.half-box {
    width: 50%;
    text-align: center;
    margin-top: 5%;
    margin-bottom: 5%;
}

#box1 {
    width: 50%;
    display: flex;
    justify-content: space-evenly;
}
#box2 {
    width: 50%;
    display: flex;
    justify-content: space-evenly;
}
#box3 {
    width: 50%;
    display: flex;
    justify-content: space-evenly;
}
#box4 {
    width: 50%;
    display: flex;
    justify-content: space-evenly;
}

.box{
    border-radius: 10px;
    border: 3px solid whitesmoke;
    filter: drop-shadow(15px 15px 8px #333333b8);
}

@media screen and (max-width: 510px) {

    .menu-button {
        font-size: 1.4rem;
    }

    i {
        margin-left: 3%;
        margin-right: 3%;
        }
    }

    @media screen and (max-width: 350px) {

        .menu-button {
            font-size: 1.2rem;
        }
    
        i {
            margin-left: 1%;
            margin-right: 1%;
            }
        }

